--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -48,6 +48,9 @@
             </div>
         </div>
         <!-- 맨 위로 이동 버튼 영역 -->
+        <div>
+            <div th:replace="~{common/darkModeToggle}"></div>
+        </div>
         <div class="scroll-to-top">
             <img src="/images/top-icon.png" alt="Scroll to Top" onclick="scrollToTop()"
                 style="cursor: pointer; width: 40px; height: 40px;">
