--- a/src/main/resources/templates/order/afterOrder.html
+++ b/src/main/resources/templates/order/afterOrder.html
@@ -7,37 +7,37 @@
     <title>주문 완료</title>
     <link rel="stylesheet" href="/css/order/afterOrder.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/common/darkModeToggle.css">
+    <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
 </head>
 
 <body>
     <header th:replace="~{common/common}"></header>
     <main class="afterOrderMain">
-        <h1>주문이 완료되었습니다!</h1>
+        <h1>주문이 완료되었습니다!</h1><br><br>
 
         <section>
             <h3>구매한 상품</h3>
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th>책 사진</th>
+                        <th></th>
                         <th>책 이름</th>
                         <th>구매 개수</th>
-                        <th>상품 금액</th>
+                        <th>해당 도서 총 금액</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr th:each="item : ${orderItems}">
                         <td>
-                            <img th:src="${item.bookCover != null ? item.bookCover : '/images/bookCover/default.jpg'}" 
-                                 alt="책 이미지" 
-                                 class="img-thumbnail" 
-                                 style="max-width: 100px;">
+                            <img th:src="${item.bookCover != null ? item.bookCover : '/images/bookCover/default.jpg'}"
+                                alt="책 이미지" class="img-thumbnail" style="max-width: 100px;">
                         </td>
                         <td th:text="${item.bookTitle != null ? item.bookTitle : '제목 없음'}">책 이름</td>
-                        <td th:text="${item.orderCount != null ? item.bookCount : 0}">0</td>
-                        <td th:text="${item.orderPrice != null && item.bookCount != null ? item.orderPrice  : 0}">0</td>
+                        <td th:text="${item.bookCount}">0</td>
+                        <td th:text="${item.orderPrice} + ' 원'">0 원</td>
                     </tr>
-                    
+
                 </tbody>
             </table>
         </section>
@@ -57,9 +57,9 @@
                     <tr>
                         <th>배송지</th>
                         <td>
+                            <p th:text="${order.userZip}">04524</p>
                             <p th:text="${order.userAddress}">서울특별시 중구</p>
                             <p th:text="${order.userDetailAddress}">1층</p>
-                            <p th:text="${order.userZip}">04524</p>
                         </td>
                     </tr>
                 </tbody>
@@ -71,7 +71,7 @@
                 <tbody>
                     <tr>
                         <th>총 상품 금액</th>
-                        <td id="totalPrice">0 원</td>
+                        <td th:text="${totalPrice - 3500} + ' 원'">0 원</td>
                     </tr>
                     <tr>
                         <th>배송비</th>
@@ -79,13 +79,14 @@
                     </tr>
                     <tr>
                         <th>총 결제 금액</th>
-                        <td id="totalPayment">0 원</td>
+                        <td id="totalPayment" th:text="${totalPrice} + ' 원'">0 원</td>
                     </tr>
-                    
+
                 </tbody>
             </table>
         </section>
     </main>
+
     <footer th:replace="~{common/footer :: footer}"></footer>
     <script src="/js/order/afterOrder"></script>
 </body>
