리뷰 점수 입니다.

--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -165,6 +165,7 @@
                     <p><strong>옮긴이:</strong> <span th:text="${book.bookTalt}">옮긴이</span></p>
                     <p><strong>가격:</strong> <span th:text="${book.bookPrice}">0</span>원</p>
                     <p><strong>출간일:</strong> <span th:text="${book.bookDate.substring(0, 10)}">출간일</span></p>
+                    <p><strong>평점:</strong> <span th:text="${book.scoreAvg}">평점</span></p>
                 </div>
             </div>
         </a>
