--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -18,11 +18,19 @@
         d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z" />
     </symbol>
   </svg>
-  <div class="btn-container gap-1">
-    <button id="allLoad" class="btn btn-secondary mt-3 col-5">전부 불러오기</button>
-    <button id="allSave" class="btn btn-primary mt-3 col-5">전부 저장하기</button>
-    <button id="allPlus" class="btn btn-success mt-3 col-5">전부 담기</button>
-    <button id="allMinus" class="btn btn-danger mt-3 col-5">전부 빼기</button>
+  <div class="btn-container">
+    <button id="allLoad" class="btn btn-outline-primary">
+      <i class="fas fa-download me-2"></i>전체 불러오기
+    </button>
+    <button id="allSave" class="btn btn-primary">
+      <i class="fas fa-save me-2"></i>전체 저장하기
+    </button>
+    <button id="allPlus" class="btn btn-success">
+      <i class="fas fa-plus-circle me-2"></i>전체 선택
+    </button>
+    <button id="allMinus" class="btn btn-danger">
+      <i class="fas fa-minus-circle me-2"></i>전체 해제
+    </button>
   </div>
 
   <main>
