--- a/src/main/resources/templates/customer/inquiry.html
+++ b/src/main/resources/templates/customer/inquiry.html
@@ -12,16 +12,29 @@
     <header th:replace="~{common/common}"></header>
     <div th:replace="~{common/side-menu}"></div>
     <main class="inquiry-main">
+        <h3><strong>상세 조회</strong></h3>
+        
+        <!-- 탭 섹션 -->
+        <p> <h5>문의 유형 선택하기</h5>
+            <select name="project" id="inquiryProject-dropdown">
+                <option value="1">전체보기</option>
+                <option value="2">주문관련</option>
+                <option value="3">배송관련</option>
+                <option value="4">취소/환불</option>
+                <option value="5">기타문의</option>
+            </select>
+        </p>
+        <section class="inquiry-tabs">
+            <nav>
+                <ul>
+                    <li class="tab active" data-status="-1">전체</li>
+                    <li class="tab" data-status="0">접수 완료</li>
+                    <li class="tab" data-status="1">관리자 확인</li>
+                    <li class="tab" data-status="2">답변 완료</li>
+                </ul>
+            </nav>
+        </section>
         <!-- 검색 섹션 -->
-        <h4><strong>상세 조회</strong></h4>
-        <select name="project" id="inquiryProject-dropdown">
-            <option>유형 선택</option>
-            <option value="all">전체보기</option>
-            <option value="order">주문관련</option>
-            <option value="delivery">배송관련</option>
-            <option value="cancelOrRefund">취소/환불</option>
-            <option value="etc">기타문의</option>
-        </select>
         <section class="inquiry-search">
             <div class="filter-area">
                 <label for="sort-dropdown">조회 기간:</label>
@@ -48,17 +61,7 @@
             </div>
         </section>
 
-        <!-- 탭 섹션 -->
-        <section class="inquiry-tabs">
-            <nav>
-                <ul>
-                    <li class="tab active" data-status="-1">전체</li>
-                    <li class="tab" data-status="0">접수 완료</li>
-                    <li class="tab" data-status="1">관리자 확인</li>
-                    <li class="tab" data-status="2">답변 완료</li>
-                </ul>
-            </nav>
-        </section>
+
 
         <!-- 문의 리스트 -->
         <section class="inquiry-list">
@@ -66,6 +69,7 @@
                 <thead>
                     <tr>
                         <th>글번호</th>
+                        <th>문의 유형</th>
                         <th>제목</th>
                         <th>작성일</th>
                         <th>처리 상태</th>
@@ -81,6 +85,10 @@
                     <th:block th:unless="${#lists.isEmpty(inquiryList)}">
                         <tr th:each="inquiry:${inquiryList}" th:object="${inquiry}">
                             <td th:text="*{queryNo}">번호</td>
+                            <td th:if= "${inquiry.querySubject == '2'}">주문관련</td>
+                            <td th:if= "${inquiry.querySubject == '3'}">배송관련</td>
+                            <td th:if= "${inquiry.querySubject == '4'}">취소/환불</td>
+                            <td th:if= "${inquiry.querySubject == '5'}">기타문의</td>
                             <td th:text="*{queryTitle}" class="queryName" th:data-query-no="*{queryNo}">
                                 <span>제목</span>
                             </td>
