--- a/src/main/resources/static/css/fragments/side-menu.css
+++ b/src/main/resources/static/css/fragments/side-menu.css
@@ -1,70 +1,96 @@
+
 .sideBar {
-  max-width: 250px;
+  min-width: 250px;
   height: 100vh;
-  background-color: #EFEFEF;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   flex-shrink: 0;
-  font-size: 12px;
-}
-.sideBar ul {
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
-}
-
-.sideBar ul {
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  margin-left: 300px;
+  gap: 20px;
+  
 }
 
-.sideBar a {
+.menu {
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  border-radius: 8px;
+  transition: background-color 0.3s ease, color 0.3s ease;
   text-decoration: none;
-  color: black;
+  gap: 10px;
+  margin-bottom: 0; 
 }
 
-.sideBar a:visited {
-  color: black;
-  /* 방문 후 색상도 검정으로 고정 */
+.menu > a{
+  text-decoration: none; 
+  color:#333;
 }
 
-.sideBar a:hover {
-  text-decoration: underline;
-  /* 마우스 올리면 밑줄 표시 */
+.menu:hover {
+  background-color: #969696;
+}
+
+.menu.active {
+  background-color: #205375;
+  color: white;
+}
+
+.menu.active:hover {
+  background-color: #183b54;
+}
+
+.menu i {
+  font-size: 20px;
+  color: inherit;
 }
 
 .submenu {
-  display: none; /* 처음엔 숨겨진 상태 */
-  list-style-type: none;
-  padding-left: 20px;
-}
-
-.submenu li {
-  padding: 5px 0;
-}
-
-/* 기존 스타일 */
-.menu-item {
-  font-size: 18px; /* 예시로 메인 메뉴 글자 크기 */
+  list-style: none;
+  margin-top: -15px;
+  padding-left: 40px; 
+  display: none;
+  width: fit-content;
   font-weight: bold;
 }
 
-/* 서브메뉴 스타일 추가 */
+.submenu li {
+  margin: 5px 0;
+}
+
+.submenu li:hover {
+  background-color: #969696; 
+  transform: translateX(5px);
+  border-radius: 8px; 
+}
+
 .submenu li a {
-  font-size: 16px; /* 서브메뉴의 글자 크기를 조정합니다 */
-  font-weight: normal;
-  color: #333; /* 원하는 글자 색상을 지정합니다 */
+  font-size: 16px;
+  color: #333; 
+  text-decoration: none;
+  transition: color 0.3s ease;
   padding: 5px 10px;
-  text-decoration: none; /* 링크 아래의 밑줄을 제거합니다 */
 }
 
-.submenu li a:hover {
-  color: #007bff; /* 서브메뉴 항목에 마우스를 올렸을 때 색상 변경 */
+
+
+.submenu li a:before {
+  margin-right: 3px;
+  color: #bbb;
 }
 
-.menu{
-  cursor: pointer;
+
+
+.menu-icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
