--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -23,6 +23,7 @@
                 <button type="submit">Search</button>
                 <input type="hidden" name="categories" id="hiddenCategories">
                 <input type="hidden" name="preferences" id="hiddenPreferences">
+                <input type="hidden" name="sortOption" id="hiddenSearchOption">
             </form>
         </div>
 
