--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -61,7 +61,7 @@
                     <a href="member/signUp" class="w-100 py-2 mb-2 btn btn-outline-primary rounded-3" type="submit">
                         회원가입
                     </a>
-                    <a href="findId" class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
+                    <a href="member/findId" class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
                         아이디 / 비밀번호 찾기
                     </a>
                     <button class="w-100 py-2 mb-2 btn btn-outline-secondary rounded-3" type="submit">
