--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -58,17 +58,31 @@
           <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;구매 및 배송
           <ul class="submenu">
             <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;구매 내역 조회</a></li>
-
           </ul>
         </h3>
 
         <h3 class="menu">
           <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;내 활동 내역
           <ul class="submenu">
-            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;문의내역</a></li>
-            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;리뷰내역</a></li>
-            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;찜 목록</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 리뷰 목록</a></li>
+            <li><a href="">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내가 찜한 목록</a></li>
           </ul>
+        </h3>
+
+        <h3 class="menu">
+          <i class="fa-solid fa-comments"></i>&nbsp;&nbsp;1:1 문의
+          <ul class="submenu">
+            <li><a href="/customer/query">&nbsp;&nbsp;&nbsp;&nbsp;1:1 문의하기</a></li>
+            <li><a href="/customer/inquiry">&nbsp;&nbsp;&nbsp;&nbsp;1:1 문의내역</a></li>
+          </ul>
+        </h3>
+
+        <h3 class="menu">
+          <a href="/customer/qna" style="text-decoration: none; color:#333;"><i class="fa-solid fa-question-circle"></i>&nbsp;&nbsp;자주 묻는 질문(FAQ)</a>
+        </h3>
+    
+        <h3 class="menu">
+          <a href="/customer/notice" style="text-decoration: none; color:#333;"><i class="fa-solid fa-bullhorn"></i>&nbsp;&nbsp;공지사항</a>
         </h3>
       </div>
 
