--- a/src/main/resources/templates/admin/adminNewBook.html
+++ b/src/main/resources/templates/admin/adminNewBook.html
@@ -144,7 +144,7 @@
                 N
               </td>
               <td>
-                <button class="updateBtn" th:value="${requestNo}">
+                <button class="updateBtn" th:value="*{bookNo}">
                   등록하기
                 </button>
               </td>
