--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -412,7 +412,7 @@
     </script>
 
 
-
+    <script src="/js/order/order.js"></script>
   </main>
   <div th:replace="~{common/footer :: footer}"></div>
 </body>
