--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -6,30 +6,29 @@
                 <img src="/images/logo.png" alt="Logo">
             </a>
         </div>
-    </nav>
-    
-    <!-- 검색 바 -->
-    <div class="search-bar">
-        <h1 style="font-family: 'DeltaUniverse-Regular'; font-weight: 'bold';">
-            P&nbsp;&nbsp;H&nbsp;&nbsp;A&nbsp;&nbsp;N&nbsp;&nbsp;T&nbsp;&nbsp;O&nbsp;&nbsp;M&nbsp;&nbsp;B&nbsp;&nbsp;O&nbsp;&nbsp;O&nbsp;&nbsp;K&nbsp;&nbsp;S<br><br><br></h1> 
-        <form action="/searchBookPage/searchBooks" method="get">
-            <input type="text" name="searchTitle" placeholder="검색어를 입력하세요" 
-            th:value="${param.searchTitle ?: ''}"/>
-            <button type="submit">Search</button>
-            <input type="hidden" name="categories" id="hiddenCategories">
-            <input type="hidden" name="preferences" id="hiddenPreferences">
-            <input type="hidden" name="sortOption" id="hiddenSearchOption">
-        </form>
-    </div>
-    
-    <!-- 사용자 메뉴 -->
-    <div class="user-menu">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-        data-bs-target="#modalLogin">로그인</button>
-        <a href="/member/signUp" class="btn btn-primary headerJoinBtn">회원가입</a>
-        <a href="/cart" class="btn btn-primary headerCartBtn">장바구니</a>
-        <a href="/support" class="btn btn-primary headerJoinBtn" >고객지원</a>
-    </div>
+
+        <!-- 검색 바 -->
+        <div class="search-bar">
+            <a href="/" class="logoTitle">
+                P&nbsp;&nbsp;H&nbsp;&nbsp;A&nbsp;&nbsp;N&nbsp;&nbsp;T&nbsp;&nbsp;O&nbsp;&nbsp;M&nbsp;&nbsp;B&nbsp;&nbsp;O&nbsp;&nbsp;O&nbsp;&nbsp;K&nbsp;&nbsp;S<br><br><br>
+            </a>
+            <form action="/searchBookPage/searchBooks" method="get">
+                <input type="text" name="searchTitle" placeholder="검색어를 입력하세요" th:value="${param.searchTitle ?: ''}" />
+                <button type="submit">Search</button>
+                <input type="hidden" name="categories" id="hiddenCategories">
+                <input type="hidden" name="preferences" id="hiddenPreferences">
+                <input type="hidden" name="sortOption" id="hiddenSearchOption">
+            </form>
+        </div>
+
+        <!-- 사용자 메뉴 -->
+        <div class="user-menu">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                data-bs-target="#modalLogin">로그인</button>
+            <a href="/member/signUp" class="btn btn-primary headerJoinBtn">회원가입</a>
+            <a href="/cart" class="btn btn-primary headerCartBtn">장바구니</a>
+            <a href="/support" class="btn btn-primary headerJoinBtn">고객지원</a>
+        </div>
     </header>
 
     <!-- 로그인 모달 -->
